# backend/src/routes/video.ts
@@ -1,11 +1,10 @@
 import { Router } from 'express';
-import { getVideo, getVideoFeed, approveVideo } from '../controllers/video.js';
+import { getVideoFeed, approveVideo } from '../controllers/video.js';
 import { authenticateToken } from '../middlewares/auth.js';
 import { streamVideo, streamSubtitle } from '../controllers/videoPlayback.js';
 
 export const videoRouter = Router();
 
-videoRouter.get('/get', authenticateToken, getVideo);
 videoRouter.get('/feed', authenticateToken, getVideoFeed);
 videoRouter.put('/approval', authenticateToken, approveVideo);
 
